# snow-itom-auditor

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.agent-forge/: .gitignore  project.json
.agent-forge/configs/: known-issues.json
.agent-forge/plans/: backlog.json  roadmap.json
.agent-forge/state/: improve-proposals.json  monitor-patterns.json  monitor-test-gaps.json  pipeline.json
.agent-forge/tests/: test-cases.json
.claude/: settings.json
.github/workflows/: ci.yml
src/snow_itom_auditor/: __init__.py  client.py  config.py  engine.py  exceptions.py  models.py  scoring.py  server.py  storage.py
src/snow_itom_auditor/tools/: __init__.py  assets.py  cmdb.py  compliance.py  discovery.py  history.py  orchestration.py  remediation.py  reports.py
tests/: conftest.py  test_config.py  test_engine.py  test_exceptions.py  test_models.py  test_package.py  test_scoring.py  test_server.py  test_storage.py  test_tools_assets.py  test_tools_cmdb.py  test_tools_compliance.py  test_tools_discovery.py  test_tools_history.py  test_tools_orchestration.py  test_tools_remediation.py  test_tools_reports.py
tests/integration/: test_integration.py
