[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snow-itom-auditor"
version = "0.1.0"
description = "ServiceNow ITOM Compliance Auditor - MCP Server for automated CMDB, Discovery, and Asset auditing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "amragl" },
]
keywords = ["servicenow", "itom", "cmdb", "discovery", "audit", "compliance", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "types-requests>=2.31.0",
]

[project.scripts]
snow-itom-auditor = "snow_itom_auditor.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/snow_itom_auditor"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration tests requiring a live ServiceNow instance",
]
